@@ -300,7 +300,7 @@ finish_output ()
   if (paginate_flag && outfile != 0 && outfile != stdout)
     {
 #ifdef PR_PROGRAM
-      int wstatus;
+      int wstatus, w;
       if (ferror (outfile))
 	fatal ("write error");
 # if ! HAVE_FORK
@@ -308,7 +308,9 @@ finish_output ()
 # else /* HAVE_FORK */
       if (fclose (outfile) != 0)
 	pfatal_with_name ("write error");
-      if (waitpid (pr_pid, &wstatus, 0) < 0)
+      while ((w = waitpid (pr_pid, &wstatus, 0)) < 0 && errno == EINTR)
+	;
+      if (w < 0)
 	pfatal_with_name ("waitpid");
 # endif /* HAVE_FORK */
       if (wstatus != 0)
